--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -84,8 +84,7 @@
             <div id="home-explore">
                 <div class="homebackground">
                     <div id="home-explore-body">
-                        <p class="font-black" id="title">Latest <span
-                            class="font-peach">News</span></p>
+                        <p class="font-black" id="title">Latest <span class="font-peach" id="title">News</span></p>
                             <p class="font-black" id="content"><span class="font-peach">The latest</span> happenings
                                 here in Iloilo City, right at your fingertips. 
 
@@ -96,8 +95,8 @@
                             <div class="homecard">
                                 <img src="/img/travelguidepic.jpg" class="homecardimg" alt="">
                                 <div class="homecardimgbody">
-                                    <h1 class="homecardtitle">Travel Guide</h1>
-                                    <p class="homecardinfo">Here is a list of things to do in Iloilo! A compact travel guide to help you should you visit outside of Iloilo!</p>
+                                    <h1 class="homecardtitle" id="title">Travel Guide</h1>
+                                    <p class="homecardinfo" id="content">Here is a list of things to do in Iloilo! A compact travel guide to help you should you visit outside of Iloilo!</p>
                                         <a href="https://guidetothephilippines.ph/articles/ultimate-guides/iloilo-travel-guide" class="buttoncard">Learn More</a>
                                 </div>
                             </div>
@@ -105,16 +104,16 @@
                             <div class="homecard">
                                 <img src="/img/panaynewspic.jpg" class="homecardimg" alt="">
                                 <div class="homecardimgbody">
-                                    <h1 class="homecardtitle">ILoilo Latest News</h1>
-                                    <p class="homecardinfo">Access Panay News, the biggest daily newspaper in Western Visayas brings you breaking news on environment, nation, Metro Bacolod, Iloilo, and top stories from around the world.</p>
+                                    <h1 class="homecardtitle" id="title">ILoilo Latest News</h1>
+                                    <p class="homecardinfo" id="content">Access Panay News, the biggest daily newspaper in Western Visayas brings you breaking news on environment, nation, Metro Bacolod, Iloilo, and top stories from around the world.</p>
                                         <a href="https://guidetothephilippines.ph/articles/ultimate-guides/iloilo-travel-guide" class="buttoncard">Learn More</a>
                                 </div>
                             </div>
                             <div class="homecard">
                                 <img src="/img/localgovtpic.jpg" class="homecardimg" alt="">
                                 <div class="homecardimgbody">
-                                    <h1 class="homecardtitle">Iloilo City Local Government</h1>
-                                    <p class="homecardinfo">Access comprehensive information about your travel location!
+                                    <h1 class="homecardtitle" id="title">Iloilo City Local Government</h1>
+                                    <p class="homecardinfo" id="content">Access comprehensive information about your travel location!
 
                                         Discover essential details such as travel regulations, safety guidelines, local attractions from the local government.
                                     </p>
@@ -125,8 +124,8 @@
                             <div class="homecard">
                                 <img src="/img/thingstodopic.jpg" class="homecardimg" alt="">
                                 <div class="homecardimgbody">
-                                    <h1 class="homecardtitle">Things to do in Iloilo City</h1>
-                                    <p class="homecardinfo">Learn more about the activities that Iloilo City has to offer with this comprehensive list of activities, each one a must add to your travel to-do list!</p>
+                                    <h1 class="homecardtitle" id="title">Things to do in Iloilo City</h1>
+                                    <p class="homecardinfo" id="content">Learn more about the activities that Iloilo City has to offer with this comprehensive list of activities, each one a must add to your travel to-do list!</p>
                                         <a href="https://www.klook.com/en-PH/city/481-iloilo-things-to-do/?gad=1&gclid=Cj0KCQjw98ujBhCgARIsAD7QeAitxuS-7yea2v71EkSAQglo227rIZf6K6ggRwOLonNhPjVuVayY16YaAnp5EALw_wcB&gclsrc=aw.ds" class="buttoncard">Learn More</a>
                                 </div>
                             </div>
