--- a/views/partials/top-nav-bar.ejs
+++ b/views/partials/top-nav-bar.ejs
@@ -29,11 +29,11 @@
     <!--right-side group-->
     <li class="top-child" id="user-child">
         <!--light/dark mode-->
-        <div id="mode">
+        <!--<div id="mode">
             <button id="color-theme" onclick="lightDarkMode()">
                 <img src="/img/light.png" id="theme-icon">
             </button>
-        </div>
+        </div>-->
         <!--greeting-->
         <div id="greeting">
             <% if (username != 'Guest') { %>
