--- a/views/pages/accommodation.ejs
+++ b/views/pages/accommodation.ejs
@@ -28,13 +28,13 @@
         <div id="accommodation-body">
             <div id="accommodation-body-group">
                 <div id="body-header">
-                    <p class="font-black" id="third-title">ACCOMMODATION</p>accommodation
-                    <div class="filter-row">
+                    <p class="font-black" id="third-title">ACCOMMODATION</p>
+                    <!--<div class="filter-row">
                         <p class="font-black">Sort By:</p>
                         <button>Name</button>
                         <button>Type</button>
                         <button>Rating</button>
-                    </div>                  
+                    </div>-->                  
                     
                     <div id="wraphorizontal">
                         <% var accommodations = accommodations %>
@@ -45,8 +45,8 @@
                                     style="object-fit:cover;border-radius:10px;padding-top:1px;">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="font-black" style="font-size: 50px;"><%= accommodations[index]['Title']%></h5>
-                                    <p class="font-black" style="font-size: 20px;"><%= accommodations[index]['Description']%></p>
+                                    <h5 class="font-black" style="font-size: 50px;" id="content"><%= accommodations[index]['Title']%></h5>
+                                    <p class="font-black" style="font-size: 20px;" id="content"><%= accommodations[index]['Description']%></p>
                                     <% var link = accommodations[index]['Link']%>
                                     <!--Pls edit the card_state_location below to fetch map coordinates-->
                                     <% var card_state_location = 'buttoncard_location'%>
