--- a/views/pages/food.ejs
+++ b/views/pages/food.ejs
@@ -31,11 +31,11 @@
                 <div id="food-body-group">
                     <div id="body-header">
                         <p class="font-black" id="third-title">OUR TOP <span class="font-peach">BITES</span></p>
-                        <div class="filter-row">
+                        <!-- <div class="filter-row">
                             <p class="font-black">Sort By:</p>
                             <button>Name</button>
                             <button>Date</button>
-                        </div>
+                        </div> -->
                     </div>
                     <!-- For each food from database -->
                     <div id="wrap">
@@ -46,8 +46,8 @@
                                     <img src=<%= foods[index]['Images Attached']%> />
                                 </div>
                                 <div class="card-body">
-                                  <h2 class="font-black"><%= foods[index]['Title']%></h5>  
-                                  <p class="font-black"><%= foods[index]['Description'] %></p>
+                                  <h2 class="font-black" id="content"><%= foods[index]['Title']%></h5>  
+                                  <p class="font-black" id="content"><%= foods[index]['Description'] %></p>
                                   <% var link = foods[index]['Link']%>
                                   <% var card_state = 'buttoncard'%>
                                   <% if(!link){%>
