--- a/views/pages/places-and-landmarks.ejs
+++ b/views/pages/places-and-landmarks.ejs
@@ -32,11 +32,11 @@
                 <div id="p-a-l-body-group">
                     <div id="body-header">
                         <p class="font-black" id="third-title">Places You Must <span class="font-peach">Visit</span></p>
-                        <div class="filter-row">
+                        <!-- <div class="filter-row">
                             <p class="font-black">Sort By:</p>
                             <button>Name</button>
                             <button>Date</button>
-                        </div>
+                        </div> -->
                         <!-- Just a dummy to show -->
                         <div id="wraphorizontal">
                             <% var places = places %>
@@ -47,8 +47,8 @@
                                         style="object-fit:cover;border-radius:10px;padding-top:1px;">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="font-black" style="font-size: 50px;"><%= places[index]['Place']%></h5>
-                                        <p class="font-black" style="font-size: 20px;"><%= places[index]['Description']%></p>
+                                        <h5 class="font-black" style="font-size: 50px;" id="content"><%= places[index]['Place']%></h5>
+                                        <p class="font-black" style="font-size: 20px;" id="content"><%= places[index]['Description']%></p>
                                         <% var link = places[index]['Link']%>
                                         <% if(!link){%>
                                             <% link = '#'%>
