--- a/views/partials/side-nav-bar.ejs
+++ b/views/partials/side-nav-bar.ejs
@@ -12,7 +12,7 @@
         <a href="/places-and-landmarks" id="link1">
             <div>
                 <img src="/img/places-and-landmarks.png">
-                <p>PLACES & LANDMARKS</p>
+                <p id="title">PLACES & LANDMARKS</p>
             </div>
         </a>
     </li>
@@ -21,7 +21,7 @@
         <a href="/festivals" id="link2">
             <div>
                 <img src="/img/festivals.png">
-                <p>FESTIVALS</p>
+                <p id="title">FESTIVALS</p>
             </div>
         </a>
     </li>
@@ -30,7 +30,7 @@
         <a href="/food" id="link3">
             <div>
                 <img src="/img/food.png">
-                <p>FOOD</p>
+                <p id="title">FOOD</p>
             </div>
         </a>
     </li>
@@ -40,7 +40,7 @@
             <div>
                 <img src="/img/accommodation.png">
                 <!--Accomm. is short for Accommodation-->
-                <p>ACCOMM.</p>
+                <p id="title">ACCOMM.</p>
             </div>
         </a>
     </li>
@@ -49,7 +49,7 @@
         <a href="/traffic" id="link5">
             <div>
                 <img src="/img/traffic.png">
-                <p>TRAFFIC</p>
+                <p id="title">TRAFFIC</p>
             </div>
         </a>
     </li>
@@ -61,7 +61,7 @@
             <a href="/logout">
                 <div>
                     <img src="/img/logout.png">
-                    <p>LOGOUT</p>
+                    <p id="title">LOGOUT</p>
                 </div>
             </a>
         <!-- IF USER IS LOGGED OUT (INCLUDING GUEST MODE HERE ALWAYS)-->
@@ -69,7 +69,7 @@
             <a href="/login">
                 <div>
                     <img src="/img/login.png">
-                    <p>LOGIN</p>
+                    <p id="title">LOGIN</p>
                 </div>
             </a>
         <% } %>
@@ -79,5 +79,7 @@
 </nav>
 
 <div id="sidebar-cover">
+    <button id="sidebar-cover-button" onclick="showHide()">
+    </button>
     <!--DARK TRANSPARENT COVER FOR SIDEBAR ACTIVATION-->   
 </div>
