--- a/views/pages/accommodation.ejs
+++ b/views/pages/accommodation.ejs
@@ -41,8 +41,7 @@
                         <% for (index in accommodations){%>
                             <div id="horizontal-card-group" class="horizontalcard">
                                 <div class="horizontalcardimg" style="width: auto;">
-                                    <img src=<%= accommodations[index]['Images Attached']%> style="width:500px;height:80;
-                                    style="object-fit:cover;border-radius:10px;padding-top:1px;">
+                                    <img src=<%= accommodations[index]['Images Attached']%>>
                                 </div>
                                 <div class="card-body">
                                     <h5 class="font-black" style="font-size: 50px;" id="content"><%= accommodations[index]['Title']%></h5>
