--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -47,14 +47,9 @@
                             </video>
                         </div>
 
-                        <p class="font-white" id="title">ABOUT ILOILO </p>
-                        <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf
-                            parchment wingardium.
-                            Wand betrayal parseltongue soul detention elf lion back his.
-                            Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes.
-                            Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva.
-                            Bat forbidden cabbage parchment sunshine.
-                            Bag moon ground moon quidditch sight grim.
+                        <p class="font-white" id="title">ILOILO CITY </p>
+                        <p class="font-white" id="content"><span class="font-peach">The City of Love: </span> 
+                            Discover the hidden gem of Iloilo City. Nestled in the heart of the Visayas region, Iloilo offers a delightful fusion of history, culture, and natural beauty. Lagaw is your gateway to unlocking the secrets and treasures of this captivating city.
                         </p>
                     </div>
                 </div>
@@ -64,29 +59,48 @@
                 <div class="homebackground">
                     <div class="two-vertical-panels">
                         <div id="home-highlights-body">
-                            <p class="font-black" id="title">The City's Most Famous <span
-                                    class="font-peach">HIGHLIGHTS</span></p>
-                            <p class="font-black" id="content"><span class="font-peach">Potter ipsum</span> wand elf
-                                parchment wingardium.
-                                Wand betrayal parseltongue soul detention elf lion back his.
-                                Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes.
-                                Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva.
-                                Bat forbidden cabbage parchment sunshine.
-                                Bag moon ground moon quidditch sight grim.
+                            <p class="font-black" id="title">Iloilo City's Rich <span
+                                    class="font-peach">History</span></p>
+                            <p class="font-black" id="content"><span class="font-peach">Under Spanish colonization</span>
+                                the early type of dispersed settlement called barangays evolved into towns (pueblos) and provinces (alcaldias). Parish churches, beside the nearby town hall (casa tribunal) and town plaza, became the heart of town plans. From the town center, residences filled up the streets which radiated in a grid-iron pattern. Today, the town plaza remains a center of public and religious celebrations.
+
+                                <br><br>The seat of government was first set up along the coastlines of Arevalo, which was always under the threat of Muslim or Dutch pirates. Political survival prompted the Spaniards to transfer the seat to Ogtong (now Oton) and eventually near the mouth of Iloilo River (now Fort San Pedro). Since its establishment, a radial road network which radiates from the fort is still being used today.
                             </p>
                         </div>
                         <div id="home-highlights-body">
-                            <%- include('../partials/carousel'); %>
+                            <%- include('../partials/carouselhistory'); %>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div id="home-highlights">
+                <div class="homebackground">
+                    <div class="two-vertical-panels">
+                        <div id="home-highlights-body">
+                            <%- include('../partials/carousel'); %>
+                        </div>
+                        <div id="home-highlights-body">
+                            <p class="font-black" id="title">The City's Most Famous <span
+                                    class="font-peach">Highlights</span></p>
+                            <p class="font-black" id="content"><span class="font-peach">Immerse yourself</span> 
+                                 in the captivating charm of Iloilo City, a destination rich in history, culture, and natural beauty. Discover the highlights that make this city a must-visit location for travelers seeking a unique and memorable experience.
+                                 Iloilo City is also known for its warm and friendly locals who are always ready to welcome visitors with open arms. Experience the genuine hospitality as you engage with the locals and learn about their traditions and way of life.
+
+                                 <br><br>Embark on an unforgettable journey through Iloilo City, where rich history, delectable cuisine, vibrant festivals, and breathtaking landscapes converge. Discover the highlights of this captivating destination and create memories that will last a lifetime.
+                                </p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
             <div id="home-explore">
                 <div class="homebackground">
                     <div id="home-explore-body">
                         <p class="font-black" id="title">Latest <span class="font-peach" id="title">News</span></p>
-                            <p class="font-black" id="content"><span class="font-peach">The latest</span> happenings
-                                here in Iloilo City, right at your fingertips. 
+                            <p class="font-black" id="content"><span class="font-peach">Stay in the loop</span> 
+                                 with the most up-to-date happenings in Iloilo City, learn more about the local government, and a list of activities to do made for you by professional travel experts.
 
                             </p>
                         <div class="card-container">
