--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -4,20 +4,50 @@
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+  
+
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/img/paraw-regatta.png" class="d-block w-100" alt="..." style="width: 500px;">
+        <img src="/img/carousel1highlight.jpg" class="d-block w-100" alt="..." style="width:  600px;">
       </div>
       <div class="carousel-item">
-        <img src="/img/tabucan.png" class="d-block" alt="d-block w-100" style="width: 500px;">
+        <img src="/img/carousel2highlight.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">
       </div>
       <div class="carousel-item">
-        <img src="/img/placeholder.jpg" class="d-block" alt="d-block w-100" style="width: 500px;">    
+        <img src="/img/carousel3highlight.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">    
+      </div>
+      <div class="carousel-item">
+        <img src="/img/carousel4highlight.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">    
+      </div>
+      <div class="carousel-item">
+        <img src="/img/carousel5highlight.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">    
+      </div>
+      <div class="carousel-item">
+        <img src="/img/carousel6highlight.jpg" class="d-block" alt="d-block w-100" style="width: 600px;">    
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only"></span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only"></span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only"></span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only"></span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only"></span>
     </a>
     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
