Fixed wrong link Panay News

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -120,7 +120,7 @@
                                 <div class="homecardimgbody">
                                     <h1 class="homecardtitle" id="title">ILoilo Latest News</h1>
                                     <p class="homecardinfo" id="content">Access Panay News, the biggest daily newspaper in Western Visayas brings you breaking news on environment, nation, Metro Bacolod, Iloilo, and top stories from around the world.</p>
-                                        <a href="https://guidetothephilippines.ph/articles/ultimate-guides/iloilo-travel-guide" class="buttoncard">Learn More</a>
+                                        <a href="https://www.panaynews.net/" class="buttoncard">Learn More</a>
                                 </div>
                             </div>
                             <div class="homecard">
