--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -24,7 +24,7 @@
                     <p class="font-white">Profile History</p>
                 </div>
                 <div id="user_places">
-                    <p class="font-white">Here are the places you've visited</p>
+                    <p class="font-white" id="title">Here are the places you've visited</p>
                     <div id="wrap">
                         <%- include('../partials/dummyfood'); %>
                             <%- include('../partials/dummyfood'); %>
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div id="user_food">
-                    <p class="font-white">Here are the foods you've viewed</p>
+                    <p class="font-white" id="title">Here are the foods you've viewed</p>
                     <div id="wrap">
                         <%- include('../partials/dummyfood'); %>
                             <%- include('../partials/dummyfood'); %>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div id="user_culture">
-                    <p class="font-white">Here are the festivals you've shown</p>
+                    <p class="font-white" id="title">Here are the festivals you've shown</p>
                     <div id="wrap">
                         <%- include('../partials/dummyfood'); %>
                             <%- include('../partials/dummyfood'); %>
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div id="user_accommodation">
-                    <p class="font-white">Here are the accommodations you've looked</p>
+                    <p class="font-white" id="title">Here are the accommodations you've looked</p>
                     <div id="wrap">
                         <%- include('../partials/dummyfood'); %>
                             <%- include('../partials/dummyfood'); %>
