--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -4,8 +4,8 @@
 
 ******************************************/
 
-/* {
-    border: 1px solid black;
+/* * {
+    border: 1px solid white;
 } */
 
 
@@ -653,7 +653,7 @@ a:hover {
     flex-direction: column;
     text-align: justify;
     margin-top: 50px;
-    margin-left:40px;
+    margin-left: 40px;
     width: 100%;
 }
 
@@ -862,7 +862,7 @@ a:hover {
     font-size: 50px;
     margin-top: 40px;
     margin-left: 85px;
-    width:400px;
+    width: 400px;
 
 
 }
@@ -1028,7 +1028,7 @@ input:focus {
     bottom: 10px;
     right: 10px;
     cursor: pointer;
-    font-family: Arial, sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
 }
 
@@ -1045,7 +1045,7 @@ input:focus {
     bottom: 10px;
     right: 220px;
     cursor: pointer;
-    font-family: Arial, sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
 }
 
@@ -1079,7 +1079,7 @@ input:focus {
 #card-group {
     backdrop-filter: blur(1rem);
     box-shadow: 1.3rem 1.3rem 1.3rem rgba(0, 0, 0, 0.1);
-    background-color: rgba(225, 225, 225, 0.5);
+    background-color: rgba(225, 225, 225, 0.7);
     display: flex;
     justify-content: start;
     align-items: center;
@@ -1231,7 +1231,7 @@ input:focus {
     height: 80px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
     padding: 0 30px 0 30px;
 }
 
@@ -1252,9 +1252,13 @@ input:focus {
     border-style: solid;
 }
 
-#userbody>div>p,
-#userheadergroup p {
+#userbody>#userheader,
+#userheadergroup p,
+#userheader>p {
+    display: flex;
     font-size: 30px;
+    align-items: center;
+    font-family: 'Raleway', sans-serif;
 }
 
 #userheadergroup {
@@ -1262,6 +1266,10 @@ input:focus {
     justify-content: space-between;
     flex-direction: row;
     width: 450px;
+}
+
+#userbody #title{
+    font-size: 30px;
 }
 
 /*
